--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html>
   <head>
     <title>31</title>
-    <script src="31.js" async></script>
     <style>
       body {
         /* Remove margins on the sides (where do they come from?!) */
@@ -44,6 +43,9 @@
     <div id="canvasContainer">
       <canvas id="31" width="248" height="248">Error loading game :(</canvas>
     </div>
+
+    <script src="fpsmeter.min.js" async></script>
+    <script src="31.js" async></script>
 
   </body>
 </html>
