--- a/index.html
+++ b/index.html
@@ -24,8 +24,12 @@
         position: absolute;
       }
       #canvasContainer {
-        height: 248px;
-        width: 248px;
+        height: min-content;
+        height: -webkit-min-content;
+        height: -moz-min-content;
+        width: min-content;
+        width: -webkit-min-content;
+        width: -moz-min-content;
 
         position: fixed;
         top: 50%;
