--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         -ms-user-select: none;
         user-select: none;
       }
-      #canvas {
+      #canvas31 {
         margin-bottom: -4px;
       }
       #debug {
@@ -45,7 +45,7 @@
     <div id="debug">Debug goes here.</div>
 
     <div id="canvasContainer">
-      <canvas id="canvas" width="248" height="248">Error loading game :(</canvas>
+      <canvas id="canvas31" width="248" height="248">Error loading game :(</canvas>
     </div>
 
     <script src="fpsmeter.min.js" async></script>
