--- a/index.html
+++ b/index.html
@@ -18,9 +18,6 @@
         -ms-user-select: none;
         user-select: none;
       }
-      #canvas {
-        margin-bottom: -4px;
-      }
       #debug {
         padding: 10px;
         background: rgba(255,255,255,0.5);
@@ -38,6 +35,15 @@
 
         box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.46), 0px 2px 10px rgba(0, 0, 0, 0.36);
       }
+      #canvas {
+        margin-bottom: -4px;
+      }
+      .button {
+        padding: 2px;
+        background: grey;
+        float: left;
+        margin-right: 5px;
+      }
     </style>
   </head>
   <body>
@@ -46,6 +52,8 @@
 
     <div id="canvasContainer">
       <canvas id="canvas" width="248" height="248">Error loading game :(</canvas>
+      <div class="button" id="getSmallShip" onclick="">Small Ship</div>
+      <div class="button" id="getBigShip" onclick="">Big Ship</div>
     </div>
 
     <script src="fpsmeter.min.js" async></script>
