--- a/index.html
+++ b/index.html
@@ -35,14 +35,11 @@
 
         box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.46), 0px 2px 10px rgba(0, 0, 0, 0.36);
       }
-      #canvas {
+      #canvas31 {
         margin-bottom: -4px;
       }
       .button {
-        padding: 2px;
         background: grey;
-        float: left;
-        margin-right: 5px;
       }
     </style>
   </head>
@@ -52,8 +49,6 @@
 
     <div id="canvasContainer">
       <canvas id="canvas31" width="248" height="248">Error loading game :(</canvas>
-      <div class="button" id="getSmallShip" onclick="">Small Ship</div>
-      <div class="button" id="getBigShip" onclick="">Big Ship</div>
     </div>
 
     <script src="fpsmeter.min.js" async></script>
