--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         padding: 10px;
         background: rgba(255,255,255,0.5);
         position: absolute;
+        right: 0px;
       }
       #canvasContainer {
         width: min-content;
@@ -37,9 +38,6 @@
       }
       #canvas31 {
         margin-bottom: -4px;
-      }
-      .button {
-        background: grey;
       }
     </style>
   </head>
