--- a/index.html
+++ b/index.html
@@ -19,10 +19,12 @@
         user-select: none;
       }
       #debug {
-        padding: 10px;
+        padding: 5px;
         background: rgba(255,255,255,0.5);
         position: absolute;
-        right: 0px;
+        left: 5px;
+        bottom: 5px;
+        display: none; <!-- Can be shown when requested by javascript -->
       }
       #canvasContainer {
         width: min-content;
