Trying to get primary and secondary colours working

--- a/index.html
+++ b/index.html
@@ -41,6 +41,10 @@
       #canvas31 {
         margin-bottom: -4px;
       }
+      #canvasPri, #canvasSec {
+        margin-bottom: -4px;
+        display: none;
+      }
     </style>
   </head>
   <body>
@@ -49,6 +53,8 @@
 
     <div id="canvasContainer">
       <canvas id="canvas31" width="496" height="496">Error loading game :(</canvas>
+      <canvas id="canvasPri" width="496" height="496">Error loading game :(</canvas>
+      <canvas id="canvasSec" width="496" height="496">Error loading game :(</canvas>
     </div>
 
     <script src="fpsmeter.min.js" async></script>
