Pixel based collision detection
Read the documentation.

Also you can now set all the sizing stuff from the 3 variables
gridSizeX, gridSizeY, cSize, in the JavaScript file. I would still
prefer 31x31, but showed it to a couple of people and they said keep
current size or bigger so it's certainly not going back to 31x31 and I
should shut up about it :P

--- a/index.html
+++ b/index.html
@@ -38,11 +38,7 @@
 
         box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.46), 0px 2px 10px rgba(0, 0, 0, 0.36);
       }
-      #canvas31 {
-        margin-bottom: -4px;
-      }
-      #canvasPri, #canvasSec {
-        margin-bottom: -4px;
+      #canvas31, #canvasPri, #canvasSec, #canvasCollision {
         display: none;
       }
     </style>
@@ -52,7 +48,7 @@
     <div id="debug">Debug goes here.</div>
 
     <div id="canvasContainer">
-      <canvas id="canvas31" width="496" height="624">Error loading game :(</canvas>
+      <canvas id="canvas31" width="0" height="0">Error loading game :(</canvas>
     </div>
 
     <script src="fpsmeter.min.js"></script>
