--- a/Inheritance Testing/index.html
+++ b/Inheritance Testing/index.html
@@ -2,10 +2,19 @@
 <html>
   <head>
     <title>Inheritance Testing</title>
+
+    <style>
+      body {
+        overflow: hidden;
+        margin: 0;
+      }
+    </style>
   </head>
   <body>
 
-    <script src="inheritance.js" async></script>
+    <canvas id="bigCanvas"></canvas>
+
+    <script src="inheritance.js"></script>
 
   </body>
 </html>
