--- a/index.html
+++ b/index.html
@@ -38,8 +38,9 @@
 
         box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.46), 0px 2px 10px rgba(0, 0, 0, 0.36);
       }
-      #canvas31, #canvasPri, #canvasSec, #canvasCollision {
-        display: none;
+      #canvasPri, #canvasSec, #canvasCollision {
+        display: inherit;
+        margin-top: 50px;
       }
     </style>
   </head>
@@ -50,6 +51,10 @@
     <div id="canvasContainer">
       <canvas id="canvas31" width="0" height="0">Error loading game :(</canvas>
     </div>
+
+    <!--<canvas id="canvasPri"></canvas>-->
+    <!--<canvas id="canvasSec"></canvas>-->
+    <!--<canvas id="canvasCollision"></canvas>-->
 
     <script src="fpsmeter.min.js"></script>
     <script src="31.js"></script>
