Trying to work out why collisions don't work :(

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 
     <!--<canvas id="canvasPri"></canvas>-->
     <!--<canvas id="canvasSec"></canvas>-->
-    <!--<canvas id="canvasCollision"></canvas>-->
+    <canvas id="canvasCollision"></canvas>
 
     <script src="fpsmeter.min.js"></script>
     <script src="31.js"></script>
