Stars draw as stars not red rain, changed colours
I've just got two spawners at the moment, both with slightly different
draw functions to create a sense of the ones closer moving faster
therefore a longer tail.
I also tweaked the colours of the level background and the page
background slightly to make the particles more visible as everything was
blending together a bit - these are obviously up for debate, I'm not
sure what tint the background should be, maybe change per level?

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       body {
         /* Remove margins on the sides (where do they come from?!) */
         margin: 0px;
-        background-color: #1b2d3f;
+        background-color: #323742;
 
         font-family: sans-serif;
         overflow: hidden;
