Colours working on player & enemies

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
         box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.46), 0px 2px 10px rgba(0, 0, 0, 0.36);
       }
-      #canvasPri, #canvasSec, #canvasCollision {
+      #canvasPri, #canvasSec, #canvasCollision, #canvasFlip{
         display: inherit;
         margin-top: 50px;
       }
@@ -52,9 +52,10 @@
       <canvas id="canvas31" width="0" height="0">Error loading game :(</canvas>
     </div>
 
-    <!--<canvas id="canvasPri"></canvas>-->
-    <!--<canvas id="canvasSec"></canvas>-->
-    <canvas id="canvasCollision"></canvas>
+    <canvas id="canvasPri" width="200" height="100"></canvas>
+    <canvas id="canvasSec" width="200" height="100"></canvas>
+    <canvas id="canvasFlip" width="200" height="100"></canvas>
+    <canvas id="canvasCollision" width="200" height="100"></canvas>
 
     <script src="fpsmeter.min.js"></script>
     <script src="31.js"></script>
